<resources>
    <string name="app_name">Dawini</string>
    <string name="daweney">Dawini</string>
    <string name="welcome_text">Ease of ordering and finding nursing and medical services</string>
    <string name="welcome">Welcome</string>
    <string name="todo">doctor image</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="confirm_pass">confirm pass</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="forget_your_password">Forgot password?</string>
    <string name="confirm_password">confirm pass</string>
    <string name="sign_up">Sign up</string>
    <string name="Already_have_account">Already have an account ?</string>
    <string name="search">search</string>
    <string name="username">username</string>
    <string name="mail">Email</string>
    <string name="error">Error</string>
    <string name="pin_view">pinview</string>
    <string name="send">send</string>
    <string name="verify_account">Verify Account</string>
    <string name="email_temp">ex**2@gmail.com</string>
    <string name="enter_email">Enter you email address below to reset your password</string>
    <string name="didn_t_receive_code">Didn’t get the code </string>
    <string name="resend">Resend Code?</string>
    <string name="sent_code_to_you_email">sent code to you email:</string>
    <string name="email_verification">Email Verification</string>
    <string name="reset_password">reset password</string>
    <string name="new_password">new password</string>
    <string name="send_code">send code</string>
    <string name="date">date</string>
    <string name="date_ex">15/may/23</string>
    <string name="time">12:00 am</string>
    <string name="service_type">service type</string>
    <string name="request_services">request services</string>
    <string name="service_name">service name \nsubservice name2</string>
    <string name="address">address</string>
    <string name="address_ex">tala - el menoufia 14 elfeky streat</string>
    <string name="provider_img">provider Img</string>
    <string name="back_arrow">back arrow</string>
    <string name="setting">setting</string>
    <string name="request_date_time">12:00 am - 15/may/23</string>
    <string name="cost">cost</string>
    <string name="cost_ex">350</string>
    <string name="chat_with_provider">chat with provider</string>
    <string name="provider_name">provider name</string>
    <string name="gender_men">men</string>
    <string name="cancel">cancel</string>
    <string name="done">Done</string>
    <string name="ok" >ok</string>
    <string name="call_provider">call provider</string>
    <string name="choose_provider">choose provider </string>
    <string name="plus_one">+1</string>
    <string name="rate">rate</string>
    <string name="rate_ex">4.5/5</string>
    <string name="empty_request_list">Empty Request List</string>
    <string name="request_new_service">Ready to request a service? You can request by clicking the button below.</string>
    <string name="try_again">Try Again</string>
    <string name="oops">Oops! </string>
    <string name="error_with_connection">Please check your internet connection and try again</string>
    <string name="empty" />
    <string name="logo">logo</string>
    <string name="get_services_category_response_fail">"error with server try again "</string>
    <string name="continue_text">continue</string>
    <string name="patient_name">patient name</string>
    <string name="provider_gender">provider gender</string>
    <string name="anyone">Anyone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="request_location">location</string>
    <string name="address_required_msg">address is required</string>
    <string name="name_required_msg">name is required</string>
    <string name="phone_required_msg">phone number is required</string>
    <string name="date_required_msg">date is required</string>
    <string name="name_not_valid">name not valid</string>
    <string name="phone_not_valid">phone not valid</string>
    <string name="date_not_valid">date not valid</string>
    <string name="select_future_time">"Please select a future time"</string>
    <string name="select_future_date">"Please select a future date"</string>
    <string name="select_time_more_than_30m">Please select a time at least 30 minutes from now</string>
    <string name="send_request">send</string>
    <string name="request_send_success">request send success</string>
    <string name="invalid_data_entered">Invalid data entered</string>
    <string name="no_provider">No Provider Found: No provider available for your requested service. Please check back or choose a different option.</string>
    <string name="no_providers_found_yet">No providers found yet</string>
    <string name="search_here">search here</string>
    <string name="open_drawer">open navigation drawer</string>
    <string name="close_drawer">close  navigation drawer</string>
    <string name="communication">communication</string>
    <string name="english_language" translatable="false">en</string>
    <string name="arabic_language" translatable="false">ar</string>
    <string name="theme">theme</string>
    <string name="language">language</string>
    <string name="my_account">my account</string>
    <string name="profile">profile</string>
    <string name="history">history</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="arabic_language_ex" translatable="false">اب</string>
    <string name="english_language_ex" translatable="false">AB</string>
    <string name="text" >this text for large string to test. this text for large string to test. this text for large string to test. this text for large string to test. this text for large string to test.</string>
    <string name="profile_img">profile image</string>
    <string name="edit_icon">"edit icon "</string>
    <string name="edit">edit</string>
    <string name="none" >none</string>
    <string name="update">update</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="request_failure">failure we try to connect again</string>
    <string name="update_failure" >failure try again</string>
    <string name="logout" >Logout</string>
    <string name="whatsapp">whatsapp</string>
    <string name="permission_required">permission required</string>
    <string name="granted_permission">granted permission</string>
    <string name="need_call_permission">To make calls, please grant call access.</string>
    <string name="code_has_send">code has send</string>
    <string name="login_with_google">you login with google , try login with it</string>
    <string name="email_not_found">email not found you should register first</string>
    <string name="error_try_again">"error , try again "</string>
    <string name="opps_try_again">opps ,try again</string>
    <string name="username_or_pass_wrong">user name or password are wrong</string>
    <string name="have_error_try_again">have a error try again</string>
    <string name="cant_login_try_again">"can't login try again "</string>
    <string name="email_are_Wrong">email are wrong</string>
    <string name="user_already_existy">user already exist</string>
    <string name="pass_length_error">password length should more 8</string>
    <string name="should_register_before">you should register before</string>
    <string name="code_is_wrong">code is wrong !</string>
    <string name="nursing_services">nursing services</string>
    <string name="medical_services">medical services</string>
    <string name="radiology_services">Radiology services</string>
    <string name="medical_tests">medical tests</string>
    <string name="medical_supply">Medical supply</string>
    <string name="medical_components">Medical components</string>
    <string name="error_with_server_try_again">error with server try again</string>
    <string name="this_category_not_found">this category not found</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZGF3ZW5leSIsImEiOiJjbGppMmI0cmQwYW9iM2ZueHZwODMzdmJiIn0.4WAlhAkqjbR7IrsNyvip3g</string>
    <string name="enable_GPS">enable GPS</string>
    <string name="gps_not_enable">GPS Not Enable</string>
    <string name="location_required">Location permission need to send request</string>
</resources>