<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layoutDirection="ltr"
    tools:context=".ui.myrequestdetails.MyRequestDetails">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_shape">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_layout_height"
            android:background="@color/transparent">

            <!-- Start drawable -->
            <FrameLayout
                android:id="@+id/goBack"
                android:layout_width="@dimen/toolBar_width"
                android:layout_height="@dimen/toolBar_height"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/toolBar_button_margin"
                android:background="@drawable/control_button">

                <ImageView
                    android:layout_width="@dimen/toolBar_image_width"
                    android:layout_height="@dimen/toolBar_image_height"
                    android:layout_gravity="center"
                    android:contentDescription="@string/back_arrow"
                    android:src="@drawable/ic_left" />
            </FrameLayout>

        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/toolbar_layout_height"
            android:layout_gravity="center"
            >
        <androidx.cardview.widget.CardView
            android:id="@+id/requestDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            android:alpha=".95"
            android:backgroundTint="@color/request_background"
            app:cardCornerRadius="40dp">

            <!--            android:backgroundTint="@color/navy_blue_600"-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--request type-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/serviceType"
                        style="@style/ImportantTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/myrequest_first_text_color"
                        android:text="@string/service_type" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/line_color" />

                <!--request provider-->
                <RelativeLayout
                    android:id="@+id/provider_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/request_profile_info_margin_start"
                    android:layout_marginTop="@dimen/request_profile_info_margin"
                    android:layout_marginBottom="@dimen/request_profile_info_margin"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/RequestProviderImg"
                        android:layout_width="@dimen/request_profile_image_radius"
                        android:layout_height="@dimen/request_profile_image_radius"
                        android:background="@drawable/custom_circle_shape"
                        app:civ_border_color="@color/light_blue_100"
                        app:civ_border_width="1dp"
                        android:src="@drawable/user_profile_img" />

                    <TextView
                        android:id="@+id/requestProviderName"
                        style="@style/NormalTextViewStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/RequestProviderImg"
                        android:gravity="center"
                        android:textColor="@color/myrequest_first_text_color"
                        android:text="@string/provider_name" />

                    <TextView
                        android:id="@+id/requestProviderGender"
                        style="@style/NormalTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_toEndOf="@+id/RequestProviderImg"
                        android:text="@string/gender_men"
                        android:textColor="@color/myrequest_second_text_color"
                        app:drawableStartCompat="@drawable/ic_man" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/request_provider_apply"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/request_providers_list_height"
                    tools:listitem="@layout/request_provider_row"/>
                <!--line-->
                <TextView style="@style/line" />


                <!--request date-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.constraintlayout.utils.widget.MotionLabel
                        style="@style/LabelStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/myrequest_second_text_color"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/requestDate"
                        style="@style/NormalTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myrequest_first_text_color"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:minHeight="@dimen/request_item_min_height"
                        android:text="@string/request_date_time"
                        app:drawableStartCompat="@drawable/ic_date"/>
                </LinearLayout>

                <!--line-->
                <TextView style="@style/line" />

                <!--request date-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.constraintlayout.utils.widget.MotionLabel
                        style="@style/LabelStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/myrequest_second_text_color"
                        android:layout_weight="1"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/requestAddress"
                        style="@style/NormalTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/myrequest_first_text_color"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:minHeight="@dimen/request_item_min_height"
                        android:text="@string/address_ex"
                        app:drawableStartCompat="@drawable/ic_location" />
                </LinearLayout>

                <!--line-->
                <TextView style="@style/line" />


                <!--request cost-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <androidx.constraintlayout.utils.widget.MotionLabel
                        style="@style/LabelStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textColor="@color/myrequest_second_text_color"
                        android:text="@string/cost" />

                    <TextView
                        android:id="@+id/requestCost"
                        style="@style/NormalTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textColor="@color/myrequest_first_text_color"
                        android:gravity="center"
                        android:minHeight="@dimen/request_item_min_height"
                        android:text="@string/cost_ex"
                        app:drawableStartCompat="@drawable/ic_money" />
                </LinearLayout>



                <!--request chat-->
                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.constraintlayout.utils.widget.MotionLabel
                        style="@style/LabelStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/myrequest_second_text_color"
                        android:text="@string/chat_with_provider" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:background="@drawable/done_button_status"
                        android:contentDescription="@string/chat_with_provider"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_chat_status" />
                </LinearLayout>

                <!--line-->
                <TextView style="@style/line" />


                <!--request cancel-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.constraintlayout.utils.widget.MotionLabel
                        style="@style/LabelStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/myrequest_second_text_color"
                        android:layout_weight="1"
                        android:text="@string/cancel" />

                    <ImageButton
                        android:id="@+id/requestCancelButton"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/request_item_min_height"
                        android:layout_weight="1"
                        android:background="@drawable/done_button_status"
                        android:contentDescription="@string/cancel"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_cancel_status" />
                </LinearLayout>

                <!--line-->
                <TextView style="@style/line" />


                <!--done button-->
                <Button
                    android:id="@+id/done_btn"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/done_button_status"
                    android:textSize="@dimen/btn_text_size"
                    android:text="@string/done" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/myRequestDetailsLottieAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/floating_button_margin"
            android:background="@color/navy_blue"
            android:contentDescription="@string/call_provider"
            android:src="@drawable/floating_call_button"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>